--- a/styles/components/Home/projectItem.module.sass
+++ b/styles/components/Home/projectItem.module.sass
@@ -1,3 +1,5 @@
+@import "styles/utilities/variables"
+
 .projectItem
   display: flex
   flex-direction: column
@@ -9,3 +11,7 @@
 .name
   color: white
   margin-top: 1rem
+
+@media (max-width: $phone-screen-small)
+  .projectItem
+    margin: 0 auto
