--- a/styles/components/Home/projects.module.sass
+++ b/styles/components/Home/projects.module.sass
@@ -1,3 +1,5 @@
+@import "styles/utilities/variables"
+
 .projects
   font-family: 'Oswald', serif
   font-size: calc(1rem + 0.3vw)
@@ -8,3 +10,7 @@
   margin-bottom: 15vw
   margin-top: 200px
   row-gap: 200px
+
+@media (max-width: $phone-screen-small)
+  .projects
+    flex-direction: column
