--- a/styles/components/navbar.module.sass
+++ b/styles/components/navbar.module.sass
@@ -5,6 +5,10 @@
   display: flex
   padding: 50px 0
 
+  .ASNDlogo
+    width: 350px
+    margin-left: 5vh
+
 .links
   display: flex
   font-family: 'Source Serif Pro', serif
@@ -23,9 +27,7 @@
       text-underline-offset: 5px
       font-weight: bold
 
-.ASNDlogo
-  width: 350px
-  margin-left: 5vh
+
 
 
 @media (max-width: $phone-screen-large)
@@ -33,10 +35,12 @@
     flex-direction: column
     align-items: center
 
+    .ASNDlogo
+      margin-left: 0
+      margin-bottom: 30px
+
+
   .links
     display: grid
     grid-template-columns: 1fr 1fr
     justify-items: center
-
-  .ASNDlogo
-    margin-left: 0
