--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -5,6 +5,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Source+Serif+Pro&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap')
 
+html
+  margin: 0
+  padding: 0
+
 body
   background: #000404 url(/images/Banner1.png) no-repeat
 
