--- a/styles/pages/home.module.sass
+++ b/styles/pages/home.module.sass
@@ -1,1 +1,35 @@
+@import 'styles/utilities/variables'
+@import 'styles/utilities/mixins'
+
 .content
+  display: flex
+  flex-direction: column
+  margin: 100px 6% 0 30%
+  padding: 30px 0 50px 50px
+
+.header
+  font-size: calc(1rem + 3.6vw)
+  margin-bottom: 30px
+
+.subheader
+  font-size: calc(1rem + 0.72vw)
+  margin-bottom: 50px
+
+.button
+  @include button
+  font-weight: bold
+  font-size: calc(0.5rem + 1vw)
+  transition: background-color 0.2s ease
+
+@media (max-width: $phone-screen-small)
+  .content
+    width: 90%
+    margin: 0 auto 5rem
+    padding: 30px
+
+    a
+      margin: 0 auto
+
+  .header,
+  .subheader
+    text-align: center
