--- a/styles/pages/contact.module.sass
+++ b/styles/pages/contact.module.sass
@@ -61,8 +61,10 @@
 
 #message
   margin-bottom: 2%
+  padding: 5px
   resize: none
   border-radius: 5px
+  color: black
 
 .emailBox
   margin-bottom: 4%
