--- a/styles/pages/about.module.sass
+++ b/styles/pages/about.module.sass
@@ -44,7 +44,9 @@
   .profiles
     flex-direction: column
     align-items: center
+    margin: 5rem 0
+    gap: 15vw
 
   .profile
     width: 90%
-    margin-bottom: 15vw
+    //margin-bottom: 15vw
