Made the arrows not highlightable

--- a/styles/components/Portfolio/imageSlider.module.sass
+++ b/styles/components/Portfolio/imageSlider.module.sass
@@ -1,5 +1,4 @@
 
-
 .sliderStyles
   height: 100%
   width: 100%
@@ -24,6 +23,7 @@
   z-index: 1
   cursor: pointer
   transition: 0.3s
+  user-select: none
 
   &:hover
     background-color: black
