Added an accessibility link to the main content.

--- a/styles/components/navbar.module.sass
+++ b/styles/components/navbar.module.sass
@@ -27,6 +27,18 @@
       text-underline-offset: 5px
       font-weight: bold
 
+.skip
+  position: absolute
+  left: -10000px
+  top: auto
+  width: 1px
+  height: 1px
+  overflow: hidden
+
+  &:focus
+    position: static
+    width: auto
+    height: auto
 
 
 
