Added various size variables for page consistency.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,13 @@
 $phone-screen-large: 988px;
 $phone-screen-small: 820px;
 
-$subheader-fs: calc(1rem + 0.72vw);
+
+$header-lg: 80px;
+$header-sm: 60px;
+
+$subheader-sm: 30px;
+$subheader-m:  40px;
+$subheader-lg: 50px;
+
+$text-lg: 28px;
+$text-sm: 20px;
