--- a/src/app/home/projects.module.scss
+++ b/src/app/home/projects.module.scss
@@ -7,8 +7,8 @@
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 5%;
-  margin-bottom: 15vw;
-  margin-top: 200px;
+  margin-bottom: 10rem;
+  margin-top: 10rem;
   row-gap: 200px;
 }
 @media (max-width: $phone-screen-small) {
