--- a/src/app/contact/contact.module.scss
+++ b/src/app/contact/contact.module.scss
@@ -15,11 +15,13 @@
   padding: 5%;
 }
 .header {
-  font-size: calc(0.5rem + 2.25vw);
+  //font-size: calc(0.5rem + 2.25vw);
+  font-size: $header-lg;
   margin-bottom: 5%;
 }
 .text {
-  font-size: calc(0.5rem + 1.25vw);
+  //font-size: calc(0.5rem + 1.25vw);
+  font-size: $text-lg;
 }
 .form {
   display: flex;
@@ -27,9 +29,9 @@
   flex-direction: column;
   color: white;
   font-family: 'Poppins', sans-serif;
-  width: 40%;
+  //width: 40%;
   background-color: #220001;
-  padding: 2%;
+  padding: 25px 25px;
   border-radius: 25px;
 
   input {
@@ -59,7 +61,7 @@
 .name {
   width: 50%;
 }
-#message {
+.message {
   margin-bottom: 2%;
   padding: 5px;
   resize: none;
@@ -69,4 +71,16 @@
 .emailBox {
   margin-bottom: 4%;
   border-radius: 5px;
+}
+
+@media (max-width: $phone-screen-large) {
+  .wrapper{
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .form{
+    width: 90%;
+  }
+
 }
