--- a/src/app/home/home.module.scss
+++ b/src/app/home/home.module.scss
@@ -4,15 +4,18 @@
 .content {
   display: flex;
   flex-direction: column;
-  margin: 100px 6% 0 30%;
+  //margin: 100px 6% 0 30%;
+  margin: 0 6% 50px 30%;
   padding: 30px 0 50px 50px;
 }
 .header {
-  font-size: calc(1rem + 3.6vw);
+  //font-size: calc(1rem + 3.6vw);
+  font-size: $header-lg;
   margin-bottom: 30px;
 }
 .subheader {
-  font-size: calc(1rem + 0.72vw);
+  //font-size: calc(1rem + 0.72vw);
+  font-size: $text-lg;
   margin-bottom: 50px;
 }
 .button {
@@ -22,6 +25,12 @@
   transition: background-color 0.2s ease;
 }
 @media (max-width: $phone-screen-small) {
+  .header{
+    font-size: $subheader-m;
+  }
+  .subheader{
+    font-size: $text-sm;
+  }
   .content {
     width: 90%;
     margin: 0 auto 5rem;
