--- a/src/app/home/projectItem.module.scss
+++ b/src/app/home/projectItem.module.scss
@@ -8,13 +8,22 @@
 .image {
   width: 350px;
   height: 250px;
+  border-radius: 10px;
 }
 .name {
   color: white;
   margin-top: 1rem;
 }
+
+.projectBox{
+  padding: 10px 15px;
+}
 @media (max-width: $phone-screen-small) {
   .projectItem {
+    margin: 0 auto;
+  }
+  .projectBox{
+    width: fit-content;
     margin: 0 auto;
   }
 };
