--- a/src/styles/Layout/navbar.module.scss
+++ b/src/styles/Layout/navbar.module.scss
@@ -5,7 +5,9 @@
   padding: 50px 0;
 
   .ASNDlogo {
-    width: 350px;
+    //width: auto;
+    height: auto;
+    //width: 350px;
     margin-left: 5vh;
   }
 }
