--- a/src/app/contact/contact.module.scss
+++ b/src/app/contact/contact.module.scss
@@ -2,7 +2,7 @@
 @import 'src/styles/mixins';
 
 .wrapper {
-  margin: 5%;
+  margin-bottom: 2rem;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -12,12 +12,14 @@
   flex-direction: column;
   align-items: center;
   gap: 25px;
-  padding: 5%;
+  padding:4rem;
+  //padding: 5%;
 }
 .header {
   //font-size: calc(0.5rem + 2.25vw);
   font-size: $header-lg;
-  margin-bottom: 5%;
+  //margin-bottom: 2rem;
+  //margin-bottom: 5%;
 }
 .text {
   //font-size: calc(0.5rem + 1.25vw);
@@ -53,23 +55,27 @@
 .nameboxes {
   display: flex;
   gap: 3%;
-  margin-bottom: 4%;
+  margin-bottom: 1rem;
+  //margin-bottom: 4%;
 }
 .label {
-  margin-bottom: 1%;
+  margin-bottom: .5rem;
+  //margin-bottom: 1%;
 }
 .name {
   width: 50%;
 }
 .message {
-  margin-bottom: 2%;
+  margin-bottom: .5rem;
+  //margin-bottom: 2%;
   padding: 5px;
   resize: none;
   border-radius: 5px;
   color: black;
 }
 .emailBox {
-  margin-bottom: 4%;
+  margin-bottom: 1rem;
+  //margin-bottom: 4%;
   border-radius: 5px;
 }
 
@@ -79,7 +85,24 @@
     gap: 20px;
   }
 
+  .content {
+    padding: 3rem 0;
+    //padding: 3rem 1rem;
+    max-width: 411px;
+    width: 90%;
+  }
+
+  .header {
+    font-size: $header-sm;
+  }
+
+  .text {
+    font-size: $text-sm;
+  }
+
   .form{
+    //width: fit-content;
+    max-width: 652px;
     width: 90%;
   }
 
