--- a/src/app/portfolio/imageSlider.module.scss
+++ b/src/app/portfolio/imageSlider.module.scss
@@ -15,6 +15,7 @@
   top: 50%;
   transform: translate(0, -50%);
   padding: 0 15px 5px;
+  //padding: 20px;
   border-radius: 25px;
   font-size: calc(10px + 3vw);
   background-color: rgba(0, 0, 0, 0.5);
