--- a/src/app/portfolio/portfolio.module.scss
+++ b/src/app/portfolio/portfolio.module.scss
@@ -4,20 +4,24 @@
   margin-bottom: 5vw;
   //font-size: calc(1rem + 3vw);
   font-size: $header-lg;
-  padding: 2%;
+  //padding: 2%;
+  padding: 1.5rem;
   //width: 50%;
   width: fit-content;
   text-align: center;
-  margin-left: 40%;
+  //margin-left: 40%;
+  margin-right: 10%;
+  margin-left: auto;
 }
 .header {
   background-color: #220001;
+  font-family: 'Oswald', sans-serif;
   color: white;
   //width: 30%;
   width: fit-content;
   padding: 0.6rem;
   //font-size: calc(1rem + 2vw);
-  font-size: $header-sm;
+  font-size: $subheader-lg;
   text-align: center;
   margin-bottom: 1%;
   border-radius: 15px;
@@ -33,13 +37,16 @@
 
 @media (max-width: $phone-screen-large) {
   .content {
-    //width: 90%;
-    width: fit-content;
+    //width: fit-content;
+    width: 90%;
+    max-width: 536px;
     font-size: $subheader-lg;
+    padding: .5rem;
     margin: 0 auto;
+    //width: 65%;
   }
 
   .header {
-    font-size: $text-lg;
+    font-size: $text-sm;
   }
 }
