--- a/src/styles/Layout/navbar.module.scss
+++ b/src/styles/Layout/navbar.module.scss
@@ -3,6 +3,7 @@
 .topnav {
   display: flex;
   padding: 50px 0;
+  text-align: center;
 
   .ASNDlogo {
     //width: auto;
@@ -51,6 +52,7 @@
   .topnav {
     flex-direction: column;
     align-items: center;
+    text-align: center;
 
     .ASNDlogo {
       margin-left: 0;
