--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -29,7 +29,7 @@
   }
 
   .custom-focus {
-    @apply focus:border-green-400 focus:outline-none focus:ring-2 focus:ring-green-400 focus:ring-offset-2;
+    @apply focus:border-red-400 focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-offset-2;
   }
 
   .heading {
@@ -49,7 +49,7 @@
   }
 
   .link {
-    @apply custom-focus rounded-md font-semibold text-green-400;
+    @apply custom-focus rounded-md font-semibold text-red-500;
   }
 
   .row {
